# Mangatan

./: Cargo.toml  Makefile  README.md  dev.sh
.github/: FUNDING.yml
.github/workflows/: android_publish.yml  publish.yml
WebUI/src/features/ln/reader/components/: ContinuousReader.tsx  PagedReader.tsx  VirtualReader.tsx
WebUI/src/features/ln/reader/screens/: LNReaderScreen.tsx
WebUI/src/features/ln/reader/types/: block.ts  progress.ts  reader.ts
WebUI/src/features/ln/reader/utils/: blockPosition.ts  blockProcessor.ts  blockTracker.ts  migration.ts  pagedPosition.ts  progressUtils.ts  readerSave.ts  restoration.ts
WebUI/src/features/ln/screens/: LNLibrary.tsx
WebUI/src/features/ln/services/: epubParser.ts
WebUI/src/features/navigation-bar/: NavigationBar.constants.ts
WebUI/src/features/reader/infinite-scroll/: useReaderInfiniteScrollUpdateChapter.ts
WebUI/src/features/reader/viewer/: ReaderChapterViewer.tsx  ReaderViewer.tsx
WebUI/src/features/reader/zoom/: ReaderZoomWrapper.tsx  useMobileZoomPan.ts
WebUI/src/lib/storage/: AppStorage.ts
crates/audio-server/: Cargo.toml
crates/audio-server/src/: handlers.rs  lib.rs  state.rs
crates/yomitan-server/src/: handlers.rs
docs/: android-dev.md
